...
            containerStyle={{
              width: "40%",
              alignSelf: "flex-end",
              marginBottom: 32,
            }}
          >
            Wyślij
          </Button>
        </>
      )}
    </ImageBackground>
  );
};
...
