...
  newMatched: {},
  processedSalesRaport: null,
  inventory_id: null,
} as DocumentScannerSlice;

export const documentScannerSlice = createSlice({
  name: "documentScanner",
  initialState,
  reducers: {
    SWITCH_PREVIEW: (state) => ({
      ...state,
      isPreviewShown: !state.isPreviewShown,
    }),
...
