appId: app.invtrack.invtrack
---
# Dodaj dostawę
- tapOn:
    id: "addNewStock"
- tapOn:
    id: "toggleIsDelivery"
- assertVisible: "Inwentaryzacja"
- tapOn: "Nazwa"
- inputText: "Inw 2"
- tapOn: "Dodaj"

- tapOn:
    id: "documentScanner"
- tapOn:
    point: "50%,90%"
- tapOn: "Wyślij"

- tapOn: "Naleśniki Truskawkowe"
- tapOn: "Naleśniki z Truskawkami"
- tapOn: "Kluski knedle"
- tapOn: "Kluski"
# - tapOn:
#     id: "goBack"
# - assertVisible: "Inw 2"
